--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "shop"
   ],
   "scripts": {
-    "clean": "yarn workspaces run del \"{.next,node_modules,__generated__,.cache}\" && del node_modules",
+    
+    "clean": "rimraf \"**/{.next,node_modules,__generated__,.cache}\"",
 
     "dev:all": "yarn shop:dev && yarn admin:dev",
     "build:all": "yarn shop:build && yarn admin:build",
