--- a/package.json
+++ b/package.json
@@ -1,41 +1,34 @@
 {
-  "name": "ganjamill",
+  "name": "pick-bazar",
   "version": "11.13.0",
   "private": true,
   "author": "REDQ",
   "workspaces": [
-    "admin/rest",
+    "admin/*",
     "shop"
   ],
   "scripts": {
-    
-  "clean": "rimraf \"**/{.next,node_modules,__generated__,.cache}\"",
-
-  "shop:dev": "yarn workspace @pick-bazar/shop dev:gql",
-  "shop:build": "yarn workspace @pick-bazar/shop build:gql",
-  "shop:start": "yarn workspace @pick-bazar/shop start",
-
-  "admin:dev": "yarn workspace admin/rest dev",
-  "admin:build": "yarn workspace admin/rest build",
-  "admin:start": "yarn workspace admin/rest start",
-
-  "dev:all": "yarn shop:dev && yarn admin:dev",
-  "build:all": "yarn shop:build && yarn admin:build",
-  "start:all": "yarn shop:start && yarn admin:start"
-  },
-
-  "engines": {
-    "node": ">=16.0.0",
-    "yarn": ">=1.22.0"
+    "clean": "yarn workspaces run rimraf \"{.next,node_modules,__generated__,.cache,src/graphql/*.d.ts,src/framework/graphql/**/*.d.ts}\" && rimraf node_modules",
+    "gql-clean": "yarn workspaces run rimraf \"{__generated__,src/graphql/*.d.ts,src/framework/graphql/**/*.d.ts}\"",
+    "dev:shop-rest": "yarn workspace @pick-bazar/shop dev:rest",
+    "build:shop-rest": "yarn workspace @pick-bazar/shop build:rest",
+    "start:shop-rest": "yarn workspace @pick-bazar/shop start",
+    "dev:admin-rest": "yarn workspace @marvel/admin-rest dev",
+    "build:admin-rest": "yarn workspace @marvel/admin-rest build",
+    "start:admin-rest": "yarn workspace @marvel/admin-rest start",
+    "dev:shop-gql": "yarn workspace @pick-bazar/shop dev:gql",
+    "build:shop-gql": "yarn workspace @pick-bazar/shop build:gql",
+    "start:shop-gql": "yarn workspace @pick-bazar/shop start",
+    "dev:admin-gql": "yarn workspace @marvel/admin-graphql dev",
+    "build:admin-gql": "yarn workspace @marvel/admin-graphql build",
+    "start:admin-gql": "yarn workspace @marvel/admin-graphql start",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
-    "rimraf": "^3.0.2",
-    "eslint": "^8.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0"
+    "rimraf": "^3.0.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx,md,css}": [
