--- a/shop/.env
+++ b/shop/.env
@@ -1,5 +1,5 @@
 FRAMEWORK_PROVIDER="rest"
-NEXT_PUBLIC_REST_API_ENDPOINT="http://localhost"
+NEXT_PUBLIC_REST_API_ENDPOINT="https://ganjamill.io"
 NEXT_PUBLIC_GRAPHQL_API_ENDPOINT="http://localhost/graphql"
 APPLICATION_MODE=production
 NEXT_PUBLIC_ADMIN_URL="your-admin-url"
