--- a/admin/graphql/package.json
+++ b/admin/graphql/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "webpack": "^5.0.0",
     "@apollo/client": "3.11.8",
     "@floating-ui/react": "0.26.25",
     "@fontsource/open-sans": "5.1.0",
@@ -93,7 +95,11 @@
     "pusher-js": "8.4.0-rc2",
     "tailwindcss": "3.4.14",
     "tailwindcss-rtl": "0.9.0",
-    "typescript": "5.2.2",
+    "typescript": "^5.2.2",
     "yaml-loader": "0.8.1"
-  }
+  },
+  "resolutions": {
+  "react": "18.3.1",
+  "react-dom": "18.3.1"
+}
 }
