--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "pick-bazar",
-  "version": "11.13.0",
+  "name": "salesagram",
+  "version": "11.13.0X",
   "private": true,
-  "author": "REDQ",
+  "author": "OGL Soft",
   "workspaces": [
     "admin/*",
     "shop"
@@ -24,15 +24,26 @@
     "start:admin-gql": "yarn workspace @marvel/admin-graphql start",
     "prepare": "husky install"
   },
+  "dependencies": {
+    "@babel/core": "^7.16.0",
+    "webpack": "^5.88.0",
+     "quill": "^1.3.7",
+     "graphql": "^15.8.0"
+  },
   "devDependencies": {
     "husky": "^7.0.1",
     "lint-staged": "^11.1.2",
     "prettier": "^2.3.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "typescript": "^5.2.2"
   },
   "lint-staged": {
     "*.{js,ts,tsx,md,css}": [
       "prettier --write"
     ]
-  }
+  },
+  "resolutions": {
+  "react": "18.3.1",
+  "react-dom": "18.3.1"
+}
 }
