--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "@babel/core": "^7.16.0",
     "webpack": "^5.88.0",
      "quill": "^1.3.7",
-     "graphql": "^15.8.0"
+     "graphql": "^15.8.0",
+     "react": "^17.0.2",
+     "react-dom": "^17.0.2",
+      "react-i18next": "^13.5.0"
   },
   "devDependencies": {
     "husky": "^7.0.1",
@@ -41,9 +44,5 @@
     "*.{js,ts,tsx,md,css}": [
       "prettier --write"
     ]
-  },
-  "resolutions": {
-  "react": "18.3.1",
-  "react-dom": "18.3.1"
-}
+  }
 }
