--- a/admin/graphql/package.json
+++ b/admin/graphql/package.json
@@ -10,8 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "webpack": "^5.0.0",
+    "@babel/core": "^7.0.0",
+    "webpack": "^5.1.0",
     "@apollo/client": "3.11.8",
     "@floating-ui/react": "0.26.25",
     "@fontsource/open-sans": "5.1.0",
@@ -43,11 +43,12 @@
     "rc-pagination": "3.7.0",
     "rc-progress": "3.5.1",
     "rc-table": "7.22.2",
-    "react": "18.3.1",
+    "react": "^17.0.2",
     "react-apexcharts": "1.5.0",
     "react-content-loader": "6.2.1",
     "react-datepicker": "4.21.0",
-    "react-dom": "18.3.1",
+    "react-dom": "^17.0.2",
+    "quill": "^1.3.7",
     "react-dropzone": "14.2.10",
     "react-hook-form": "7.53.1",
     "react-i18next": "13.3.1",
@@ -97,9 +98,5 @@
     "tailwindcss-rtl": "0.9.0",
     "typescript": "^5.2.2",
     "yaml-loader": "0.8.1"
-  },
-  "resolutions": {
-  "react": "18.3.1",
-  "react-dom": "18.3.1"
-}
+  }
 }
