--- a/shop/package.json
+++ b/shop/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@pick-bazar/shop",
-  "version": "11.13.0",
+  "name": "@salesgram/shop",
+  "version": "11.13.0X",
   "private": true,
   "scripts": {
     "clean": "rimraf -g \"{.next,node_modules,__generated__,.cache,src/framework/graphql/**/*.d.ts}\"",
@@ -49,7 +49,7 @@
     "rc-rate": "2.13.0",
     "rc-slider": "10.4.0",
     "rc-table": "7.22.2",
-    "react": "18.3.1",
+    "react": "^17.0.2",
     "react-content-loader": "6.2.1",
     "react-copy-to-clipboard": "5.1.0",
     "react-countdown": "2.3.6",
@@ -77,6 +77,8 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.3",
+    "i18next": "^23.2.3",
+    "react-dom": "^17.0.2",
     "@graphql-codegen/import-types-preset": "3.0.0",
     "@graphql-codegen/typescript": "4.1.1",
     "@graphql-codegen/typescript-operations": "4.3.1",
@@ -86,7 +88,6 @@
     "@tailwindcss/typography": "0.5.15",
     "@types/apollo-upload-client": "17.0.5",
     "@types/body-scroll-lock": "3.1.2",
-    "@types/classnames": "2.3.4",
     "@types/cookie": "0.5.4",
     "@types/html-entities": "1.3.4",
     "@types/js-cookie": "3.0.6",
