--- a/shop/package.json
+++ b/shop/package.json
@@ -33,14 +33,14 @@
     "dayjs": "1.11.13",
     "deepmerge": "4.3.1",
     "framer-motion": "10.16.4",
-    "i18next": "23.16.4",
+    "i18next": "^23.2.3",
     "jotai": "2.10.1",
     "js-cookie": "3.0.5",
     "little-state-machine": "4.8.0",
     "lodash": "4.17.21",
     "next": "13.5.6",
     "next-auth": "4.24.10",
-    "next-i18next": "23.2.3",
+    "next-i18next": "15.4.2",
     "next-seo": "6.6.0",
     "overlayscrollbars": "2.10.0",
     "overlayscrollbars-react": "0.5.6",
