--- a/admin/graphql/package.json
+++ b/admin/graphql/package.json
@@ -10,9 +10,6 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "webpack": "^5.1.0",
-    "i18next": "^23.2.3",
     "@apollo/client": "3.11.8",
     "@floating-ui/react": "0.26.25",
     "@fontsource/open-sans": "5.1.0",
@@ -29,12 +26,13 @@
     "dotenv": "16.4.5",
     "framer-motion": "10.16.4",
     "graphql": "16.9.0",
+    "i18next": "23.16.4",
     "jotai": "2.10.1",
     "js-cookie": "3.0.5",
     "libphonenumber-js": "1.11.12",
     "lodash": "4.17.21",
     "next": "13.5.6",
-    "next-i18next": "15.4.2",
+    "next-i18next": "15.3.1",
     "next-pwa": "5.6.0",
     "next-seo": "6.6.0",
     "overlayscrollbars": "2.10.0",
@@ -43,12 +41,11 @@
     "rc-pagination": "3.7.0",
     "rc-progress": "3.5.1",
     "rc-table": "7.22.2",
-    "react": "^17.0.2",
+    "react": "18.3.1",
     "react-apexcharts": "1.5.0",
     "react-content-loader": "6.2.1",
     "react-datepicker": "4.21.0",
-    "react-dom": "^17.0.2",
-    "quill": "^1.3.7",
+    "react-dom": "18.3.1",
     "react-dropzone": "14.2.10",
     "react-hook-form": "7.53.1",
     "react-i18next": "13.3.1",
@@ -96,7 +93,7 @@
     "pusher-js": "8.4.0-rc2",
     "tailwindcss": "3.4.14",
     "tailwindcss-rtl": "0.9.0",
-    "typescript": "^5.2.2",
+    "typescript": "5.2.2",
     "yaml-loader": "0.8.1"
   }
 }
