--- a/shop/package.json
+++ b/shop/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@salesgram/shop",
-  "version": "11.13.0X",
+  "name": "@pick-bazar/shop",
+  "version": "11.13.0",
   "private": true,
   "scripts": {
     "clean": "rimraf -g \"{.next,node_modules,__generated__,.cache,src/framework/graphql/**/*.d.ts}\"",
@@ -33,14 +33,14 @@
     "dayjs": "1.11.13",
     "deepmerge": "4.3.1",
     "framer-motion": "10.16.4",
-    "i18next": "^23.2.3",
+    "i18next": "23.16.4",
     "jotai": "2.10.1",
     "js-cookie": "3.0.5",
     "little-state-machine": "4.8.0",
     "lodash": "4.17.21",
     "next": "13.5.6",
     "next-auth": "4.24.10",
-    "next-i18next": "15.4.2",
+    "next-i18next": "15.3.1",
     "next-seo": "6.6.0",
     "overlayscrollbars": "2.10.0",
     "overlayscrollbars-react": "0.5.6",
@@ -49,7 +49,7 @@
     "rc-rate": "2.13.0",
     "rc-slider": "10.4.0",
     "rc-table": "7.22.2",
-    "react": "^18.2.0",
+    "react": "18.3.1",
     "react-content-loader": "6.2.1",
     "react-copy-to-clipboard": "5.1.0",
     "react-countdown": "2.3.6",
@@ -86,11 +86,13 @@
     "@tailwindcss/typography": "0.5.15",
     "@types/apollo-upload-client": "17.0.5",
     "@types/body-scroll-lock": "3.1.2",
+    "@types/classnames": "2.3.4",
     "@types/cookie": "0.5.4",
     "@types/html-entities": "1.3.4",
     "@types/js-cookie": "3.0.6",
     "@types/lodash": "4.17.13",
     "@types/node": "20.8.10",
+    "@types/react": "18.3.12",
     "@types/react-copy-to-clipboard": "5.0.7",
     "@types/react-dom": "18.3.1",
     "@types/react-mailchimp-subscribe": "2.1.4",
