--- a/shop/package.json
+++ b/shop/package.json
@@ -111,7 +111,7 @@
     "postcss": "8.4.47",
     "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "0.5.6",
-    "rimraf": "5.0.5",
+    "rimraf": "^5.0.5",
     "tailwindcss": "3.4.14",
     "ts-node": "10.9.2",
     "typescript": "5.6.3",
